--- a/raspi-mlx90640/ui/mainwindow.ui
+++ b/raspi-mlx90640/ui/mainwindow.ui
@@ -24,7 +24,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
@@ -46,7 +46,7 @@
           <item row="0" column="1">
            <widget class="QLabel" name="label_25">
             <property name="text">
-             <string>Supply temperature (℃)</string>
+             <string>Surface temperature (℃)</string>
             </property>
            </widget>
           </item>
@@ -349,7 +349,7 @@
           <item row="0" column="1">
            <widget class="QLabel" name="label_3">
             <property name="text">
-             <string>Supply temperature (℃)</string>
+             <string>Surface temperature (℃)</string>
             </property>
            </widget>
           </item>
@@ -709,7 +709,7 @@
           <item row="0" column="1">
            <widget class="QLabel" name="label_12">
             <property name="text">
-             <string>Supply temperature (℃)</string>
+             <string>Surface temperature (℃)</string>
             </property>
            </widget>
           </item>
@@ -861,7 +861,7 @@
      <x>0</x>
      <y>0</y>
      <width>443</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
